# embodied-schemas

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  gpu-schema.md  next-steps.md  pyproject.toml
docs/: architecture.md  gpu-hardware-cross-reference.md  verdict-first-status.md
docs/sessions/: 2024-12-20-initial-setup.md  2025-12-20-initial-setup.md  2025-12-21-gpu-schema.md  2025-12-29-gpu-schema-completion.md  2025-12-30-cpu-schema.md  2025-12-31-arm-expansion.md  2026-01-02-integration-validation.md  2026-01-03-schema-refinement.md
src/embodied_schemas/: __init__.py  analysis.py  architectures.py  benchmarks.py  constraints.py  cpu.py  gpu.py  hardware.py  loaders.py  mission.py  models.py  npu.py  operators.py  registry.py  scheduling.py  sensors.py  usecases.py
src/embodied_schemas/data/: __init__.py
src/embodied_schemas/data/architectures/adas/: simple_adas_v1.yaml
src/embodied_schemas/data/architectures/manipulation/: pick_and_place_v1.yaml
src/embodied_schemas/data/architectures/perception/: drone_perception_v1.yaml
src/embodied_schemas/data/batteries/: amr_large.yaml  amr_small.yaml  automotive_compute.yaml  drone_medium.yaml  drone_small.yaml  handheld_industrial.yaml  humanoid_standard.yaml  quadruped_standard.yaml  wearable_medium.yaml  wearable_small.yaml
src/embodied_schemas/data/capability-tiers/: automotive_ai.yaml  embodied_ai.yaml  industrial_edge.yaml  micro_autonomy.yaml  wearable_ai.yaml
src/embodied_schemas/data/chips/amd/: hawk_point_8845hs.yaml  hawk_point_8945hs.yaml
src/embodied_schemas/data/chips/broadcom/: bcm2711.yaml  bcm2712.yaml
src/embodied_schemas/data/chips/hailo/: hailo_10h_chip.yaml  hailo_8_chip.yaml  hailo_8l_chip.yaml
src/embodied_schemas/data/chips/nvidia/: orin_nano_soc.yaml  orin_nx_soc.yaml  orin_soc.yaml  tegra_x2_soc.yaml  thor_soc.yaml
src/embodied_schemas/data/cpus/amd/: epyc_9575f_sp5.yaml  (+10 more)
tests/: __init__.py  test_analysis_schemas.py  test_cpu_integration.py  test_gpu_integration.py  test_mission_schemas.py  test_schemas.py
(+135 files in other folders)
